df-derive/tests/fail/107-fail-as-binary-bare-u8.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad {
    #[df_derive(as_binary)]
    one_byte: u8,
}

fn main() {}
